# dotsync

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.cargo/: config.toml
packaging/: RELEASE.md
packaging/homebrew/: dotsync.rb
scripts/: install.sh
src/: config.rs  ignore.rs  lib.rs  main.rs
